--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     environment:
       PGDATA: /tmp/pgaf
     command: pg_autoctl create monitor --ssl-self-signed --auth trust --run
-    ports:
-      - "5500:5432"
+    expose:
+      - 5432
     networks:
       vlan:
         ipv4_address: 172.54.32.100
@@ -24,15 +24,15 @@ services:
     "--dbname", "analytics",
     "--monitor", "postgresql://autoctl_node@monitor/pg_auto_failover",
     "--run"]
-    ports:
-      - "5501:5432"
+    expose:
+      - 5432
     networks:
       vlan:
         ipv4_address: 172.54.32.101
   node2:
     image: citusdata/pg_auto_failover
-    ports:
-      - "5432:5432"
+    expose:
+      - 5432
     environment:
       PGDATA: /tmp/pgaf
     command: [
@@ -45,8 +45,8 @@ services:
     "--dbname", "analytics",
     "--monitor", "postgresql://autoctl_node@monitor/pg_auto_failover",
     "--run"]
-    ports:
-      - "5502:5432"
+    expose:
+      - 5432
     networks:
       vlan:
         ipv4_address: 172.54.32.102
@@ -64,16 +64,20 @@ services:
     "--dbname", "analytics",
     "--monitor", "postgresql://autoctl_node@monitor/pg_auto_failover",
     "--run"]
-    ports:
-      - "5503:5432"
+    expose:
+      - 5432
     networks:
       vlan:
         ipv4_address: 172.54.32.103
   web:
     build: .
+    command: django-admin runserver 0.0.0.0:8080
+    expose:
+      - 8080
     ports:
       - "8080:8080"
-    command: make runserver
+    networks:
+      vlan:
 networks:
   vlan:
     ipam:
