Assorted fixes, round 2.
  - Use the :demo docker image for pg_auto_failover
  - Use the new tentative option --pg-hba-lan in pg_autoctl create postgres
  - Add a container to handle the initial django migration
  - Tweak the connection string from Django to include target session attrs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"  # optional since v1.27.0
 services:
   monitor:
-    image: citusdata/pg_auto_failover
+    image: citusdata/pg_auto_failover:demo
     environment:
       PGDATA: /tmp/pgaf
     command: pg_autoctl create monitor --ssl-self-signed --auth trust --run
@@ -11,13 +11,14 @@ services:
       vlan:
         ipv4_address: 172.54.32.100
   node1:
-    image: citusdata/pg_auto_failover
+    image: citusdata/pg_auto_failover:demo
     environment:
       PGDATA: /tmp/pgaf
     command: [
     "pg_autoctl", "create", "postgres",
     "--ssl-self-signed",
     "--auth", "trust",
+    "--pg-hba-lan",
     #"--hostname", "node1",
     "--hostname", "172.54.32.101",
     "--username", "ad",
@@ -30,7 +31,7 @@ services:
       vlan:
         ipv4_address: 172.54.32.101
   node2:
-    image: citusdata/pg_auto_failover
+    image: citusdata/pg_auto_failover:demo
     expose:
       - 5432
     environment:
@@ -39,6 +40,7 @@ services:
     "pg_autoctl", "create", "postgres",
     "--ssl-self-signed",
     "--auth", "trust",
+    "--pg-hba-lan",
     #"--hostname", "node2",
     "--hostname", "172.54.32.102",
     "--username", "ad",
@@ -51,13 +53,14 @@ services:
       vlan:
         ipv4_address: 172.54.32.102
   node3:
-    image: citusdata/pg_auto_failover
+    image: citusdata/pg_auto_failover:demo
     environment:
       PGDATA: /tmp/pgaf
     command: [
     "pg_autoctl", "create", "postgres",
     "--ssl-self-signed",
     "--auth", "trust",
+    "--pg-hba-lan",
     #"--hostname", "node3",
     "--hostname", "172.54.32.103",
     "--username", "ad",
@@ -71,13 +74,23 @@ services:
         ipv4_address: 172.54.32.103
   web:
     build: .
-    command: django-admin runserver 0.0.0.0:8080
+    command: bash -c "sleep 30 && django-admin runserver 0.0.0.0:8080 --noreload"
     expose:
       - 8080
     ports:
       - "8080:8080"
     networks:
       vlan:
+    depends_on:
+      - migration
+      - node1
+  migration:
+    build: .
+    command: bash -c "sleep 30 && django-admin migrate"
+    networks:
+      vlan:
+    depends_on:
+      - node1
 networks:
   vlan:
     ipam:
